z_davtro_ok_4_super_all/base/message-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-processor
  namespace: davtrowebdbvault
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
      component: worker
  template:
    metadata:
      labels:
        app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
        component: worker
    spec:
      serviceAccountName: fastapi-sa
      containers:
      - name: worker
        image: ghcr.io/exea-centrum/website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui:latest
        command: ["python", "worker.py"]
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
