z_davtro_ok_4_super_all/base/kafka-kraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: davtrowebdbvault
spec:
  clusterIP: None
  ports:
    - port: 9092
      name: client
    - port: 9093
      name: controller
  selector:
    app: kafka
    component: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: davtrowebdbvault
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      component: kafka
  template:
    metadata:
      labels:
        app: kafka
        component: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.0
          ports:
            - containerPort: 9092
            - containerPort: 9093
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 30
            periodSeconds: 10
