z_davtro_ok_4_super_all/base/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: davtrowebdbvault
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: davtrowebdbvault
spec:
  serviceName: postgres-db
  replicas: 1
  selector:
    matchLabels:
      app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
      component: postgres
  template:
    metadata:
      labels:
        app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
        component: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
