z_davtro_ok_4_super_all/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui-ingress
  namespace: davtrowebdbvault
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-web-service
            port:
              number: 80
